NextGen from PSD/CSS/main.css
element.style {
}

body {
	width: 90%;
	margin: 0 auto;
	text-align: center;
	background: linear-gradient(to right, #e5e6ea, #e2e3e7);
}

nav {
	text-align: center;
	margin-top: 10px;
	border-radius: 15px;
	/* border: 2px solid black; */
	margin-bottom: 40px;
	background-color: #f7f7f7;
	font-family: 'Lato', sans-serif;
	color: #545454;
	box-shadow: 5px 5px 2.5px #888888;
}

nav ul {
	margin-top: 0px;
	text-transform: uppercase;
	width: 90%;
}

nav a li {
	text-decoration: none;
	color: #545454;
}

nav a li:hover {
	background-color: #545454;
	color: #ffffff;
}

nav li {
	display: inline-block;
	list-style-type: none;
	padding: 25px;
}

h1 {
	font-family: 'Lato', sans-serif;
	font-weight: normal;
	color: #b6b6b6;
	font-size: 48px;
}

h2 {
	font-family: 'Lato', sans-serif;
	font-weight: normal;
	color: #b6b6b6;
	font-size: 36px;
}

h3 {
	font-family: 'Lato', sans-serif;
	font-weight: normal;
	color: #b6b6b6;
}

h4 {
	font-family: 'Lato', sans-serif;
	font-weight: normal;
	color: #b6b6b6;
}

p {
	font-family: 'Lato', sans-serif;
	font-weight: normal;
	color: #545454;	
}

.intro {
	/* border: 2px solid red; */
	height: 350px;
	padding: 15px;
	background-color: white;
	background-image: url("../Images/iphone.png");
	background-repeat: no-repeat;
	margin-bottom: 40px;
}

.intro h3 {
	width: 50%;
	float: right;
	text-align: center;
	margin-right: 25px;
	margin-bottom: 5px;
	letter-spacing: 1.2px;
}

.intro .subtitle {
	width: 50%;
	float: right;
	margin-left: 185px;
	margin-right: -20px;
	text-align: center;
}

.intro h2 {
	float: left;
	text-align: center;
	margin-left: 85px;
	margin-right: -15px;
	padding: 0px;
	margin-bottom: 5px;
	letter-spacing: 1px;
}

.intro h1 {
	float: left;
	text-align: center;
	margin-left: 25px;
	margin-right: -15px;
	padding: 0px;
	margin-bottom: 5px;
	vertical-align: top;
	color: #21699b;
}

.intro h4 {
	clear: both;
	float: right;
	width: 50%;
	text-align: justify;
	margin-right: 25px;
	letter-spacing: 1px;
}

.whyus {
	/* border: 2px solid green; */
	height: 350px;
	padding: 15px;
	background-color: white;
	background-image: url("../Images/stethoscope.jpg");
	background-repeat: no-repeat;
	background-position: right;
	background-size: 300px 300px;
	border-radius: 10px;
}

.whyus h1 {
	float: left;
	display: inline;
	color: #21699b;
	margin-bottom: 15px;
	font-weight: bold;
}

.whyus h2 {
	float: left;
	margin-right: 10px;
	display: inline;
}

.whyus p {
	clear: left;
	width: 60%;
	text-align: justify;
	float: left;
	margin-left: 15px;
	margin-bottom: 20px;

}

.whyus #steth {
	float: right;
	height: 150px;
	width: 150px;
}

.whyus a {
	clear: both;
	text-align: left;
	float: left;
	margin-left: 15px;
}

.howto {
	margin-top: 40px;
	/* border: 2px solid blue; */
	padding: 15px;
}

.howto .howtoheader {
	float: left;
	margin-left: -27px;
}

.howto #howtoicon {
	display: inline-block;
	margin-bottom: 10px;
}

.howto h1 {
	display: inline-block;
	text-align: left;
	margin-left: 10px;
	margin-right: 10px;
	margin-bottom: 10px;
}

.howto p {
	clear: both;
	width: 80%;
	text-align: justify;
	margin-left: 25px;
}

